# serializer version: 1
# name: TestDCMRefresh.test_refresh_with_fresh_tables
  '''
  
  
  Raw JSON saved to: /Users/jwilkowski/snowflake/snowflake-cli/dcm_output/refresh-20251121_124110.json
  ○ UP-TO-DATE                      JW_DCM_TESTALL.ANALYTICS.DYNAMIC_EMPLOYEES
  
  Summary: 1 up-to-date.
  
  
  '''
# ---
# name: TestDCMRefresh.test_refresh_with_no_dynamic_tables
  '''
  
  
  Raw JSON saved to: /Users/jwilkowski/snowflake/snowflake-cli/dcm_output/refresh-20251121_124110.json
  
  No dynamic tables found in the project.
  
  
  '''
# ---
# name: TestDCMRefresh.test_refresh_with_outdated_tables
  '''
  
  
  Raw JSON saved to: /Users/jwilkowski/snowflake/snowflake-cli/dcm_output/refresh-20251121_124110.json
  ✓ REFRESHED (+5 -5)   JW_DCM_TESTALL.ANALYTICS.DYNAMIC_EMPLOYEES
  
  Summary: 1 refreshed.
  
  
  '''
# ---
